# notes

./: .gitignore  A_Transition_to_Advanced_Mathematics_7e.txt  Abraham Silberschatz, Peter B. Galvin, Greg Gagne - Operating System Concepts-Wiley (2012).txt  Artificial-intelligence-a-modern-approach.txt  Benjamin C. Pierce - Types and Progamming Languages.txt  Compilers_Principles_Techniques_and_Tools.txt  Computer_Systems-A_Programmers_Perspective-2e.txt  Cryptography_Engineering__Design_Principles_and_Practical_Applications.txt  Design Patterns, Elements of Reusable Object-Oriented Software.txt  Dexter C. Kozen - Automata and Computability.txt  Eldad Eilam - Reversing_ secrets of reverse engineering.txt  Introduction_to_Algorithms_3e.txt  James F. Kurose, Keith W. Ross - Computer Networking_ A Top-Down Approach - 6e (2013).txt  Jonathan Katz and Yehuda Lindell - Introduction to Modern Cryptography.txt  MIT6.824-2020.txt  Martin Kleppmann - Designing Data-Intensive Applications. The Big Ideas Behind Reliable, Scalable and Maintainable Systems.txt  Michael Sipser - 2013 - Introduction to the theory of computation [3rd Edition].txt  Peter Brass - Advanced Data Structures.txt  README.md  Remzi H Arpaci-Dusseau, Andrea C Arpaci-Dusseau - Operating Systems_ Three Easy Pieces.txt  Thomas M. Cover, Joy A. Thomas - Elements of Information Theory 2nd Edition.txt  Tom A. Apostol - Mathematical Analysis.txt  Ullman, Jeffrey D_Widom, Jennifer - A first course in database systems.txt
AI/and_or_search/: Cargo.toml
AI/bayes/: Cargo.toml
AI/classification/: Cargo.toml
AI/classification/src/: decision_list.rs  decision_tree.rs  lib.rs  logistic_regression.rs  main.rs
AI/csp/: Cargo.toml
AI/first_order/: kinship.py
AI/localization/: Cargo.toml
AI/localization/src/: diagram.rs  k_means.rs  lib.rs  main.rs
AI/markov/: Cargo.toml
AI/mdp/: Cargo.toml
AI/minimax/: Cargo.toml
AI/propositional/: Cargo.toml
AI/searching/: Cargo.toml
AI/stat_learn/: Cargo.toml
AI/uncertainty/: Cargo.toml
AI/vaccum_cleaner/: Cargo.toml
AI/vacuum_cleaner/: Cargo.toml
Automata_HW7_parser/: parser.cabal
Automata_HW7_parser/app/: Main.hs
CLRS/: .gitignore  util.ts
CLRS/approximation/: bin-pack.ts  index.ts  parallel-scheduling.ts  set-cover.ts  subset-sum.ts  traveling-salesman.ts  tsconfig.json  vertex-cover.ts  weighted-vertex-cover.ts
CLRS/collection/: augmented-redblack-tree.ts  avl-tree.ts  direct.ts  dlist.ts  hashtable.ts  index.ts  interval-tree.ts  persistent-tree.ts  queue.ts  radix-tree.ts  redblack-tree.ts  slist.ts  treap.ts  tree.ts  tsconfig.json
CLRS/geometry/: index.ts  line.ts  polar-sort.ts  polygon.ts
CLRS/graph/: all-pair-shortest-path.ts  directed-graph.ts  index.ts  maximum-flow.ts  shortest-path.ts  weighted-graph.ts
CLRS/linear-programming/: graph-linear-program.ts  index.ts  simplex.ts
CLRS/matrix/: index.ts  least-squares-approximation.ts  lup-decomposition.ts  tsconfig.json
CLRS/multithreaded/: index.ts  p-fft.ts  p-loop.ts  p-matrix-decomposition.ts  p-matrix-multiply.ts  p-merge-sort.ts  p-quicksort.ts
CLRS/np-complete/: index.ts  subset-sum.ts  task-scheduling.ts
CLRS/number/: euclid.ts  index.ts  long-division.ts  miller-rabin.ts  modular-fft.ts  modular.ts  nontrival-power.ts  pollard-rho.ts  to-decimal.ts  tsconfig.json
CLRS/polynomial/: complex.ts  fft.ts  index.ts  polynomial.ts
CLRS/sort/: .gitignore  d-heap.ts  heap.ts  index.ts  linear-sort.ts  order.ts  quicksort.ts  tsconfig.json  young-tableau.ts
CLRS/start/: chip-test.ts  index.ts  insertion-sort.ts  matrix-mul.ts  max-subarray.ts  mergesort.ts  tsconfig.json
CLRS/string/: automaton.ts  index.ts  kmp.ts  naive.ts  rabin-karp.ts  repitition-factor.ts
CLRS/structure/: b-tree.ts  binomial-heap.ts  depth-determination.ts  disjoint-set-forest.ts  disjoint-set-list.ts  index.ts  (+4 more)
OS/memory/collatz-winapi/: Cargo.toml  temp.txt
OS/memory/collatz-winapi/src/: main.rs
OS/posix-file-copy/: Cargo.toml
OS/posix-file-copy/src/: main.rs
Reversing/chapter_11/defender_decrypt/: Cargo.toml  analysis.toml
Reversing/chapter_11/defender_decrypt/src/: decrypt.rs  lib.rs  main.rs
Reversing/chapter_11/dll_checksum_dump/: Cargo.toml
Reversing/chapter_11/dll_checksum_dump/src/: lib.rs  main.rs
TaPL/: README.md  TaPL.cabal  stack.yaml
database/query_sqlite/: Cargo.toml
database/query_sqlite/src/: lib.rs  main.rs
distributed_system/lamport_timestamp/: Cargo.toml
distributed_system/lamport_timestamp/src/: actors.rs  lib.rs
network/application/mail/: Cargo.toml
network/application/mail/src/: client.rs  lib.rs  main.rs  resolver.rs
network/application/web-proxy/: Cargo.toml
network/application/web-proxy/src/: cache.rs  http.rs  lib.rs  main.rs  resolver.rs  server.rs
network/application/web-proxy/tests/: proxy.rs
ostep/chapter_29/concurrent_structures/: Cargo.toml  rust-toolchain.toml
ostep/chapter_29/concurrent_structures/src/: counter.rs  lib.rs  linked_list.rs  main.rs
ostep/chapter_45/checksum/: .gitignore  Cargo.toml  corrupt.sh
ostep/chapter_45/checksum/benches/: checksum.rs
ostep/chapter_45/checksum/src/: additive.rs  crc.rs  fletcher.rs  lib.rs  xor.rs
pattern/: AbstractFactory.ts  Adapter.ts  Builder.ts  ChainOfResponsibility.ts  Command.ts  Composite.ts  Decorator.ts  Facade.ts  Flyweight.ts  Interpreter.ts  Iterator.ts  MazeBase.ts  Mediator.ts  Memento.ts  Observer.ts  Prototype.ts  Proxy.ts  Singleton.ts  State.ts  Strategy.ts  Visitor.ts  tsconfig.json
(+501 files in other folders)
