[package]
name = "classification"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "^4.0"
rand = "^0.7"
statrs = "^0.11"

[dev-dependencies]
regex = "^1.2"