[package]
name = "localization"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = {path = "../markov"}
itertools = "^0.8"
rand = "^0.7"
image = "^0.22"