[package]
name = "posix-file-copy"
version = "0.1.0"
authors = ["ivfranco <ivfranco@smoug.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"