[package]
name = "query_sqlite"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
rusqlite = { version = "0.24.2", features = ["bundled"] }
