[package]
name = "lamport_timestamp"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tokio = { version = "1.4.0", features = ["full"] }
