[package]
name = "collatz-winapi"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "^0.3", features = ["fileapi", "winnt", "handleapi", "winbase", "memoryapi", "errhandlingapi"] }