[package]
name = "dll_checksum_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dll_checksum_dump"
test = false
doctest = false

[lib]
doctest = false


[dependencies]
goblin = { version = "0.6.0", default-features = false, features = ["std", "pe32"] }
ntapi = "0.4.0"
