[package]
name = "web-proxy"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
env_logger = "^0.6"
httparse = "^1.3"
log = "^0.4"
trust-dns-resolver = "^0.12"