[package]
name = "concurrent_structures"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

[[bin]]
name = "concurrent_structures"
test = false
doctest = false

[lib]
name = "concurrent_structures"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
