[package]
name = "checksum"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "check_xor"
doctest = false

[[bin]]
name = "check_fletcher"
doctest = false


[dependencies]